# car-lens

./: .gitignore  BLOCKS_DIAGNOSTIC.md  DESIGN.md  README.md  SMOKE_REPORT.md  TODO.md  docker-compose.yml  pyproject.toml
app/ios/CarLense/: README.md  project.yml
app/ios/CarLense/CarLense/: CarLenseApp.swift  ContentView.swift  Info.plist
scripts/: diag_sitemap_at_cab.py  diagnose_blocks.py  fetch_carscom_detail.py  smoke_e2e.py
services/: README.md
services/recognize_api/: Dockerfile  README.md  app.py  build_prototypes.py  llm_rerank.py  requirements.txt
services/recognize_ui/: Dockerfile  nginx.conf
services/recognize_ui/static/: app.js  index.html  style.css
src/car_lense_engine/: __init__.py  cli.py
src/car_lense_engine/catalog/: __init__.py  build_catalog.py  cache.py  cli.py  nhtsa_client.py  schema.py
src/car_lense_engine/crawler/: __init__.py
src/car_lense_engine/crawler/core/: __init__.py  browser.py  cli.py  curlcffi_fetcher.py  fetcher.py  image_downloader.py  politeness.py  proxy.py  registry.py  routing.py  runner.py  sitemap.py  worker.py
src/car_lense_engine/crawler/parsers/: __init__.py  autotrader.py  base.py  bat.py  cars_com.py  carsandbids.py  common.py  craigslist.py  hemmings.py
src/car_lense_engine/crawler/seed/: __init__.py  cli.py  (+4 more)
src/car_lense_engine/dataset/: __init__.py  canonical_labels.py  canonicalize_cli.py  cli.py  compcars.py  compcars_cli.py  compcars_labels.py  make_splits.py  make_splits_cli.py  stanford_cars.py  stanford_cars_cli.py  stanford_cars_labels.py  view_labeler.py  vmmrdb.py  vmmrdb_cli.py  vmmrdb_labels.py  wikimedia.py  wikimedia_cli.py
src/car_lense_engine/db/: __init__.py  connection.py  images.py  listings.py  models.py  queue.py
src/car_lense_engine/eval/: __init__.py  baseline.py  build_prototypes_cli.py  cli.py  evaluate.py  evaluate_cli.py
src/car_lense_engine/export/: __init__.py  cli.py  mobile.py  validate.py
src/car_lense_engine/training/: __init__.py  cli.py  train_classifier.py  view_classifier.py  view_classifier_cli.py
tests/: test_smoke.py
tests/catalog/: conftest.py  test_build_catalog.py  test_cache.py  test_nhtsa_client.py
tests/crawler/core/: conftest.py  test_browser.py  test_cli.py  test_curlcffi_fetcher.py  test_image_downloader.py  test_politeness.py  test_proxy.py  test_registry.py  test_routing.py  test_runner.py  test_sitemap.py  test_worker.py  test_worker_image.py
tests/crawler/parsers/: conftest.py  test_autotrader.py  test_bat.py  test_cars_com.py  test_carsandbids.py  test_common.py  test_craigslist.py  test_hemmings.py
tests/crawler/seed/: conftest.py  test_ranker.py  test_seed.py  test_sitemap_seed.py  test_urls.py
tests/dataset/: __init__.py  test_canonical_labels.py  test_canonicalize_cli.py  test_compcars_ingest.py  test_compcars_labels.py  test_make_splits.py  test_stanford_cars_ingest.py  test_stanford_cars_labels.py  test_view_labeler.py  test_vmmrdb_ingest.py  test_vmmrdb_labels.py  test_wikimedia.py
tests/db/: conftest.py  test_connection.py  test_images.py  test_listings.py  test_queue.py
tests/eval/: test_baseline.py  test_baseline_checkpoint.py  test_build_prototypes_cli.py  test_evaluate.py
tests/export/: test_cli.py  test_mobile.py  test_validate.py
tests/services/: test_llm_rerank.py  test_recognize_api.py
tests/training/: test_train_classifier.py  test_view_classifier.py
(+44 files in other folders)
