[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "car-lense-engine"
version = "0.0.1"
description = "Offline data + training pipeline for the Car Lense vehicle-recognition app"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "playwright-stealth>=1.0.6",
    "curl-cffi>=0.7",
    "httpx>=0.27",
    "tenacity>=8.5",
    "imagehash>=4.3",
    "pillow>=10.3",
    "pydantic>=2.7",
    "sqlite-utils>=3.36",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
car-lense-engine = "car_lense_engine.cli:main"
build-catalog = "car_lense_engine.catalog.cli:main"
seed-queue = "car_lense_engine.crawler.seed.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/car_lense_engine"]
artifacts = ["src/car_lense_engine/db/migrations/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
